--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "colors": "^1.4.0",
     "common-tags": "^1.8.2",
-    "discord.js": "^14.6.0"
+    "discord.js": "^14.6.0",
+    "mongoose": "^6.8.0"
   },
   "name": "discordjs-v14-handler",
   "version": "1.0.0",
